cabal-version:       2.4
name:                nX-U8-assembler
version:             0.0.0.0
synopsis:            An assembler written in Haskell for nX-U8/100 Core
description:         An assembler written in Haskell for nX-U8/100 Core
homepage:            https://github.com/lasnikr/nX-U8-assembler
bug-reports:         https://github.com/lasnikr/nX-U8-assembler/issues
license:             MIT
license-file:        LICENSE
author:              lasnikr
maintainer:          lasnikr <lasnikprogram@gmail.com>
copyright:           2023 lasnikr
category:            Compilers/Interpreters, Development, System
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/lasnikr/nX-U8-assembler.git

common common-options
  build-depends:       base ^>= 4.13.0.0,
                       bytestring ^>= 0.10.10.0
                       haskeline ^>= 0.7.5,
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable nxasm
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N